--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -79,7 +79,7 @@ main {
   padding-top: 20%;
 }
 
-.border {
+.border-game {
   padding-top: 3px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -93,19 +93,19 @@ main {
   height: 30px;
 }
 
-.border .borderleft {
+.border-game .borderleft {
   height: 30px;
   width: 50px;
   background-image: url(../assets/leftBorder.png);
 }
 
-.border .bordermiddle {
+.border-game .bordermiddle {
   height: 30px;
   width: calc(86vw - 100px);
   background-image: url(../assets/middleBorder.png);
 }
 
-.border .borderright {
+.border-game .borderright {
   height: 30px;
   width: 50px;
   background-image: url(../assets/rightBorder.png);
