--- a/gift-generator/gift-style.css
+++ b/gift-generator/gift-style.css
@@ -3,7 +3,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
 
-
+body {
+    background-color: #001B3D;
+    margin: 0;
+    padding: 0px;
+    position: relative;
+    padding-bottom: 20%;
+    min-height: 100vh;
+  }
 
 
 
