add text and header to dress the elf page

--- a/dress-the-elf/dressup-style.css
+++ b/dress-the-elf/dressup-style.css
@@ -1,7 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+
+.explain{
+    text-align: center;
+    height: 450px;
+    width: 300px;
+    padding: 10px;
+}
+
+.explain h1{
+    color: #001B3D;
+    font-family: 'Amatic SC', cursive;
+    font-size: 60px;
+    text-align: center;
+}
+
+.explain p{
+    color: #001B3D;
+    font-family: 'Open Sans Condensed', sans-serif;
+    padding-top: 50px;
+}
+
 main{
     display: flex;
     justify-content: center;
-    padding-top: 150px;
+    padding-top: 100px;
     margin-bottom: -150px;
 }
 
@@ -13,21 +36,24 @@ main{
 }
 
 #container-game{
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 450px;
     background-color: #F5D3A0;
     display: flex;
     justify-content: center;
     padding-top: 20px;
+    border-radius: 8px;
 }
 
 .container{
     background-color: #E1F2F7;
-    width: 1000px;
-    height: 575px;
+    width: 750px;
+    height: 500px;
+    padding-right: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    border-radius: 8px;
 }
 
 #wraper{
