--- a/bingo/style-bingo.scss
+++ b/bingo/style-bingo.scss
@@ -6,6 +6,7 @@
 main{
     padding-top: 100px;
     height: 68vh;
+    
 }
 button{
     border: 2px solid $lightblue;
@@ -31,6 +32,8 @@ button{
     grid-gap:2rem;
     width: 90vw;
     margin: auto;
+
+    
 }
 
 .computer-card{
@@ -79,6 +82,7 @@ button{
     margin:auto;
     padding: 5px 5px 30px 5px;
     z-index: -1;
+    border-radius: 8px;
 }
 
 .card-title{
