--- a/gift-generator/gift-style.css
+++ b/gift-generator/gift-style.css
@@ -1,7 +1,6 @@
-  
-/* @import "./common-css/style-common.scss"; */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
+@import "./common-css/style-common.css"; 
+/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap"); */
 
 body {
     background-color: #001B3D;
