--- a/bingo/style-bingo.scss
+++ b/bingo/style-bingo.scss
@@ -29,7 +29,7 @@ button{
 .container{
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-gap:2rem;
+    grid-gap: 1rem;
     width: 90vw;
     margin: auto;
 
@@ -38,9 +38,10 @@ button{
 
 .computer-card{
     display: grid;
-    grid-template-rows: 70% 30%;
+    grid-template-rows: 60% 20% 20%;
     padding: 30px;
     justify-self: center;
+    text-align: center;
     img{
         width: 200px;
     }
@@ -49,7 +50,7 @@ button{
     display: none;
     
     position: absolute;
-    // background-color: $lightblue;
+    
     width: 100%; 
     height: 60%;
     padding: 0;
@@ -120,8 +121,8 @@ button{
   
 }
 .card * {
-    height: 90px;
-    width: 90px;
+    height: 130px;
+    width: 130px;
 }
 
 
