add smaller footer image

--- a/dress-the-elf/dressup-style.css
+++ b/dress-the-elf/dressup-style.css
@@ -38,7 +38,7 @@ main{
 #container-game{
     width: 500px;
     height: 450px;
-    background-color: #F5D3A0;
+    background-color: #D8E8FD;
     display: flex;
     justify-content: center;
     padding-top: 20px;
