Add og tag + share section

--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -148,7 +148,7 @@ a {
   margin: auto;
   -ms-grid-columns: 80% 20%;
       grid-template-columns: 80% 20%;
-  padding-bottom: 130px;
+  padding-bottom: 50px;
 }
 
 .landingsection img {
@@ -268,7 +268,7 @@ a {
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
-  padding: 100px 0 300px 0;
+  padding: 100px 0 80px 0;
   margin: auto;
   grid-gap: 20px;
   -ms-grid-columns: 40% 50% 10%;
@@ -357,7 +357,7 @@ a {
   display: grid;
   padding: 15%;
   margin: auto;
-  padding: 100px 0 300px 0;
+  padding: 100px 0;
   -ms-grid-columns: 10% 50% 40%;
       grid-template-columns: 10% 50% 40%;
   -ms-grid-rows: 10% 90%;
@@ -443,7 +443,7 @@ a {
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
-  padding: 150px 0 300px 0;
+  padding: 150px 0;
   margin: auto;
   -ms-grid-columns: 40% 50% 10%;
       grid-template-columns: 40% 50% 10%;
@@ -531,7 +531,7 @@ a {
   display: grid;
   padding: 15%;
   margin: auto;
-  padding: 100px 0 300px 0;
+  padding: 100px 0;
   -ms-grid-columns: 10% 50% 40%;
       grid-template-columns: 10% 50% 40%;
   -ms-grid-rows: 10% 90%;
@@ -609,6 +609,31 @@ a {
   grid-column: 3/4;
 }
 
+/* Share Section start */
+.share-btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 16px;
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.share-btn-container a {
+  margin: 12px 0;
+}
+
+.share-btn-container a i {
+  font-size: 25px;
+  color: #E1F2F7;
+}
+
 #footer {
   position: fixed;
   bottom: 0;
@@ -617,7 +642,14 @@ a {
   z-index: 1;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 999px) {
+  .share-btn-container {
+    padding: 10px;
+    z-index: 2;
+  }
+  .share-btn-container i {
+    font-size: 10px;
+  }
   .landingsection {
     height: auto;
     -ms-grid-columns: 90%;
