--- a/landing-page/style-index.scss
+++ b/landing-page/style-index.scss
@@ -68,7 +68,7 @@ a{
     margin: auto;
     grid-template-columns: 80% 20%;
 
-    padding-bottom: 130px;
+    padding-bottom:50px;
     
 }
 
@@ -139,7 +139,7 @@ a{
     background-color: $darkblue;
     border-radius: 30px 30px 0 0;
     display: grid;
-    padding: 100px 0 300px 0;
+    padding: 100px 0 80px 0;
     margin: auto;
     grid-gap:20px;
     grid-template-columns:40% 50% 10%;
@@ -206,7 +206,7 @@ a{
     display: grid;
     padding: 15%;
     margin: auto;
-    padding: 100px 0 300px 0;;
+    padding: 100px 0;
     grid-template-columns:10% 50% 40%;
     grid-template-rows: 10% 90%;  
     
@@ -270,7 +270,7 @@ a{
     background-color: $darkblue;
     border-radius: 30px 30px 0 0;
     display: grid;
-    padding: 150px 0 300px 0;
+    padding: 150px 0;
     margin: auto;
     
     grid-template-columns:40% 50% 10%;
@@ -336,7 +336,7 @@ a{
     display: grid;
     padding: 15%;
     margin: auto;
-    padding: 100px 0 300px 0;
+    padding: 100px 0;
     grid-template-columns:10% 50% 40%;
     grid-template-rows: 10% 90%;  
     
@@ -393,6 +393,23 @@ a{
     grid-column: 3/4;
 }
 
+/* Share Section start */
+.share-btn-container {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    a {
+        margin: 12px 0;
+    }  
+}
+
+.share-btn-container a i {
+font-size: 25px;
+color: $silverblue;
+}
 
 // footer css
 #footer{
@@ -406,7 +423,15 @@ a{
 
 
 // media query start
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 999px) {
+    .share-btn-container{
+        padding: 10px;
+        z-index: 2;
+        i{
+            font-size: 10px;
+           
+        }
+    }
     .landingsection{
         height: auto;
         grid-template-columns: 90%;
