--- a/bingo/style-bingo.scss
+++ b/bingo/style-bingo.scss
@@ -5,7 +5,7 @@
 
 main{
     padding-top: 100px;
-    height: 68vh;
+    height: 50vh;
     
 }
 button{
@@ -31,9 +31,7 @@ button{
     grid-template-columns: 30% 70%;
     grid-gap: 1rem;
     width: 90vw;
-    margin: auto;
-
-    
+    margin: auto; 
 }
 
 .computer-card{
@@ -48,9 +46,7 @@ button{
 }
 .replay-btn-div-win, .replay-btn-div-lose{
     display: none;
-    
     position: absolute;
-    
     width: 100%; 
     height: 60%;
     padding: 0;
@@ -105,18 +101,14 @@ button{
     border-radius: 10px;
     background-color: $silverblue;
     width: 80%;
-    //height: 680px;
     margin:auto;
     display: grid;
     grid-template-columns: repeat(4, 25%);
     justify-items: center;
-    //padding: 10px;
-    //grid-gap: 5px;
     img{
         width: 100%;
         justify-self: center;
-        padding: 5px;
-        
+        padding: 5px;   
     }
   
 }
@@ -153,4 +145,68 @@ button{
     60% {transform: scale(1.2);}
     80% {transform: scale(.7);}
     100% {transform: scale(.3);}
+}
+
+
+// media query start
+@media only screen and (max-width: 999px) {
+    .container{
+        display: grid;
+        grid-template-columns: 100%;
+    }
+    .computer-card{
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: 30% 70%;
+        justify-items: center;
+        grid-gap: 10px;
+        button{
+            align-self: center;
+        }
+        img{
+            grid-row:1/3;
+        }
+        h4{
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }
+    }
+    .player-card{
+        width: 95%; 
+        margin: 10% auto;
+        
+    }
+    .card{
+        width: 100%;
+    }
+    .card *{
+        width: 90px;
+        height: 90px; 
+    }
+    // footer css
+    footer{
+        position: fixed;
+    }
+}
+
+@media only screen and (max-width: 468px) {
+    
+    .computer-card{
+        height: auto;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 30% 20%;
+        justify-items: center;
+        padding: 5px;
+        img{
+            padding:10px;
+            grid-row: 1/2;
+        }
+        h4{
+            font-size: 20px;
+            grid-column: 1/2;
+            grid-row: 2/3;
+        }
+     
+}
+   
 }
