--- a/bingo/style-bingo.css
+++ b/bingo/style-bingo.css
@@ -53,7 +53,7 @@ p {
 
 main {
   padding-top: 100px;
-  height: 68vh;
+  height: 50vh;
 }
 
 button {
@@ -293,6 +293,84 @@ button h3 {
   100% {
     -webkit-transform: scale(0.3);
             transform: scale(0.3);
+  }
+}
+
+@media only screen and (max-width: 999px) {
+  .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+  .computer-card {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 60% 40%;
+        grid-template-columns: 60% 40%;
+    -ms-grid-rows: 30% 70%;
+        grid-template-rows: 30% 70%;
+    justify-items: center;
+    grid-gap: 10px;
+  }
+  .computer-card button {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .computer-card img {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+  }
+  .computer-card h4 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .player-card {
+    width: 95%;
+    margin: 10% auto;
+  }
+  .card {
+    width: 100%;
+  }
+  .card * {
+    width: 90px;
+    height: 90px;
+  }
+  footer {
+    position: fixed;
+  }
+}
+
+@media only screen and (max-width: 468px) {
+  .computer-card {
+    height: auto;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    -ms-grid-rows: 50% 30% 20%;
+        grid-template-rows: 50% 30% 20%;
+    justify-items: center;
+    padding: 5px;
+  }
+  .computer-card img {
+    padding: 10px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .computer-card h4 {
+    font-size: 20px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
   }
 }
 /*# sourceMappingURL=style-bingo.css.map */
