--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -17,7 +17,27 @@ main{
     padding-top: 20%;
 }
 
-  
+.santaGifs {
+    height: 32px;
+    width: 85vw;
+  //  background-color: yellow;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+   
+    .santaLeft {
+    background-image: url(./../assets/sprites/santaJump.gif);
+    height: 32px;
+    width: 32px;
+    background-color: transparent;
+    }
+    .santaRight {
+        background-image: url(./../assets/sprites/santaJumpRight.gif);
+        height: 32px;
+        width: 32px;
+        background-color: transparent;
+    }
+}
 .borderGame {
     padding-top: 3px;
     display: flex;
