--- a/gift-generator/gift-style.css
+++ b/gift-generator/gift-style.css
@@ -136,4 +136,14 @@ select{
         margin: 10px 0;
         border-radius: 5px;  
 }
+#snow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  z-index: 1000;
+}
+
 
