--- a/bingo/style-bingo.css
+++ b/bingo/style-bingo.css
@@ -76,6 +76,31 @@ button h3 {
   text-align: center;
 }
 
+/* Share Section start */
+.share-btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 16px;
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.share-btn-container a {
+  margin: 12px 0;
+}
+
+.share-btn-container a i {
+  font-size: 25px;
+  color: #E1F2F7;
+}
+
 .container {
   display: -ms-grid;
   display: grid;
