--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -139,9 +139,9 @@ main{
             color: #74c5ff;
         }
     }
-    .fa-enveloppe {
+    .fa-envelope {
         &:hover {
-            color: white;
+            color: $yellow;
         }
     }
     .fa-whatsapp {
