--- a/bingo/style-bingo.scss
+++ b/bingo/style-bingo.scss
@@ -36,12 +36,33 @@ button{
     a {
         margin: 12px 0;
     }  
+    i {
+        font-size: 25px;
+        color: $silverblue;
+
+    }
+    .fa-facebook {
+        &:hover {
+            color: #1674EA;
+        }
+    }
+    .fa-twitter {
+        &:hover {
+            color: #74c5ff;
+        }
+    }
+    .fa-envelope {
+        &:hover {
+            color: $yellow;
+        }
+    }
+    .fa-whatsapp {
+        &:hover {
+            color: #3ef760;
+        }
+    }
 }
 
-.share-btn-container a i {
-font-size: 25px;
-color: $silverblue;
-}
 
 // Card section start
 .container{
