--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -79,7 +79,7 @@ main {
   padding-top: 20%;
 }
 
-.santaGifs {
+.gifs {
   height: 32px;
   width: 85vw;
   display: -webkit-box;
@@ -94,18 +94,42 @@ main {
           justify-content: space-between;
 }
 
-.santaGifs .santaLeft {
+.gifs .santaLeft {
   background-image: url(./../assets/sprites/santaJump.gif);
   height: 32px;
   width: 32px;
   background-color: transparent;
 }
 
-.santaGifs .santaRight {
+.gifs .santaRight {
   background-image: url(./../assets/sprites/santaJumpRight.gif);
   height: 32px;
   width: 32px;
   background-color: transparent;
+}
+
+.gifs .evilElf {
+  background-image: url(./../assets/sprites/evilElf.gif);
+  height: 32px;
+  width: 32px;
+}
+
+.gifs .evilElfRight {
+  background-image: url(./../assets/sprites/evilElfRight.gif);
+  height: 32px;
+  width: 32px;
+}
+
+.gifs .evilGift {
+  background-image: url(./../assets/sprites/evilGift.gif);
+  height: 32px;
+  width: 32px;
+}
+
+.gifs .evilGiftRight {
+  background-image: url(./../assets/sprites/evilGiftRight.gif);
+  height: 32px;
+  width: 32px;
 }
 
 .borderGame {
