--- a/dress-the-elf/dressup-style.css
+++ b/dress-the-elf/dressup-style.css
@@ -24,7 +24,6 @@
 main{
     display: flex;
     justify-content: center;
-    padding-top: 100px;
     margin-bottom: -150px;
 }
 
@@ -34,6 +33,7 @@ main{
     margin-right: auto;
     padding-bottom: 20px;
 }
+
 
 #container-game{
     width: 500px;
@@ -54,6 +54,14 @@ main{
     justify-content: flex-end;
     align-items: center;
     border-radius: 8px;
+    margin-top: 150px;
+}
+
+@media only screen and (max-width: 500px){
+    .container{
+        flex-direction: column;
+        height: 700px;
+    }
 }
 
 #wraper{
@@ -62,4 +70,52 @@ main{
     background-color: lightblue;
     display: flex;
     justify-content: center;
+}
+/* Share Section start */
+.share-btn-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 16px;
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.share-btn-container a {
+    margin: 12px 0;
+}
+
+.share-btn-container i {
+    font-size: 25px;
+    color: #E1F2F7;
+}
+
+.share-btn-container .fa-facebook:hover {
+    color: #1674EA;
+}
+
+.share-btn-container .fa-twitter:hover {
+    color: #74c5ff;
+}
+
+.share-btn-container .fa-envelope:hover {
+    color: #F5D3A0;
+}
+
+.share-btn-container .fa-whatsapp:hover {
+    color: #3ef760;
+}
+
+#footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
